# stratagema

./: Cargo.toml  README.md  build_projects.bat  commands.txt
.github/workflows/: build-macro-stub.yml  build-streamdeck-plugin.yml
archive/: README.md
archive/rust_multi_stubs/: README.md  build.rs  build_everything.bat  build_projects.bat
archive/rust_multi_stubs/icons/: converticons.bat  converticons.sh
archive/workflows-archived/: README.md  windows-build.yml
docs/: macro_stub_notes.md  plugin_helper_contract.md  streamdeck_plugin_initial_tasks.md  streamdeck_plugin_plan.md
macro_stub/: Cargo.toml  README.md  build.rs
macro_stub/assets/: README.md
macro_stub/src/: main.rs
src/: main.rs
streamdeck_plugin/: README.md  commands.txt  manifest.json  plugin.js
streamdeck_plugin/property-inspector/: index.html  pi.css  pi.js
streamdeck_plugin/scripts/: package.sh
streamdeck_plugin/shared/: commands.js
streamdeck_plugin/test/: commands.test.js  helper_args.test.js  helper_spawn.test.js
