[package]
name = "macro_stub"
edition.workspace = true
authors.workspace = true
version.workspace = true
description = "Single stratagem macro helper with CLI flags"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
enigo = "0.1.3"

[target.'cfg(windows)'.build-dependencies]
ico = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
